copy json-lib from https://github.com/aalmiray/Json-lib.git